--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <meta charset='UTF-8'/>
 <meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport'/>
 <meta content='IE=edge' http-equiv='X-UA-Compatible'/>
-  <title>buatpacarku</title>
- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
+  <title>ourhappyday</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@500&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js">
 </script>
 <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous">
@@ -17,12 +17,12 @@
 <style>
 body{background-image: url("bg.jpg");
      background-size: 100% 100%;
-     font-family: 'Neucha', cursive;
+    font-family: "Outfit", sans-serif;
     font-weight: 400;}
 </style><div id="bodyblur"></div>
 
 <div id="konten"><div id="fotoloveu"><div class="image">
-<!-- Foto Akhir --><img src="GIF/20.webp" id="animasi" width="170px" height="170px"/></div></div>
+<!-- Foto Akhir --><img src="3.gif" id="animasi" width="170px" height="170px"/></div></div>
 
 <p class='catatan sek' data-text='&#9829;' id='koteks'>
 <span id="text"></span><br><br><span id="penutup" style="font-size:1.1rem;"></span>
@@ -42,7 +42,7 @@ var audio = new Audio('lovin.mp3');
 }         
 
 //Reaksi
- async function bukaWa(){window.location = "https://line.me/ti/p/3NqtLDRQFN"}
+ async function bukaWa(){window.location = "https://x.com/intakiex"}
 </script>
 
 <script type="text/javascript">            
@@ -52,60 +52,33 @@ var audio = new Audio('lovin.mp3');
             });
             async function mulai(){
              await swals.fire({
-                title: "haloo kakak! tebak aku mau ngapain?", 
+                title: "Hi, love! Kamu pasti inget ini hari spesial kita", 
                 imageUrl: 'GIF/1.gif',
                 imageWidth: 200, imageHeight: 200,
                }); 
                  play();
              
                  await swals.fire({
-                  title: "hayoo udah tebak belum?", 
+                  title: " Yap, betul. Hari ini hari jadi kita yang ke 2 bulan!", 
                   imageUrl: 'GIF/2.gif',
                   imageWidth: 200, imageHeight: 200,
                  });
 
                  await swals.fire({
-                  title: " jawabanya adalah... kepo yaa?", 
+                  title: "Thank you for being by my side through thick and thin", 
                   imageUrl: 'GIF/3.gif',
                   imageWidth: 200, imageHeight: 200,
                  });
 
               await swals.fire({
-                  title: "hehehe aku ga ngapa ngapain cuma mau diem ajaa wlee", 
+                  title: "Here's to many more beautiful memories together", 
                   imageUrl: 'GIF/4.gif',
                   imageWidth: 200, imageHeight: 200,
                  });
 
               await swals.fire({
-                  title: "bercandaa hehe nanti kalo aku diem aja pacarku di culik nanti aku sedih ", 
+                  title: " I'm blessed to have you as my girlfriend. Happy 2nd monthsary, my love <3", 
                   imageUrl: 'GIF/5.webp',
-                  imageWidth: 200, imageHeight: 200,
-                 });
-              await swals.fire({
-                title:  "yang jelas aku mau bilang banyak terimakasih buat kakak!", 
-                imageUrl: 'GIF/6.gif',
-                imageWidth: 200, imageHeight: 200,
-               }); 
-              await swals.fire({
-                title: "terimakasih banyak yaa udah mau jadi orang yang selalu excited sama aku", 
-                imageUrl: 'GIF/7.gif',
-                imageWidth: 200, imageHeight: 200,
-               });
-                 await swals.fire({
-                  title: " terimakasih udah mau temenin sposess", 
-                  imageUrl: 'GIF/8.gif',
-                  imageWidth: 200, imageHeight: 200,
-                 });
-
-                 await swals.fire({
-                  title: "terimakasih udah mau aku ajak mewarnai", 
-                  imageUrl: 'GIF/9.gif',
-                  imageWidth: 200, imageHeight: 200,
-                 });
-
-              await swals.fire({
-                  title: " i love you kakakk!", 
-                  imageUrl: 'GIF/10.gif',
                   imageWidth: 200, imageHeight: 200,
                  });
                  ketik();expl();
