--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ var audio = new Audio('lovin.mp3');
 
               await swals.fire({
                   title: " I'm blessed to have you as my girlfriend. Happy 2nd monthsary, my love <3", 
-                  imageUrl: 'GIF/5.webp',
+                  imageUrl: 'GIF/5.gif',
                   imageWidth: 200, imageHeight: 200,
                  });
                  ketik();expl();
