--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ var audio = new Audio('lovin.mp3');
 }         
 
 //Reaksi
- async function bukaWa(){window.location = "https://x.com/intakiex"}
+ async function bukaWa(){window.location = "https://x.com/BU03INTAKH"}
 </script>
 
 <script type="text/javascript">            
